--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-473.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-383.9KB/s(Youtube:不良林), server: agem.xiaohouzi.club, port: 10051, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: agem.xiaohouzi.club}}
-  - {name: 🇸🇬 新加坡-3.71MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-317.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-4.84MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.56MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇺🇸 美国-4.04MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 未知国家-1.76MB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇺🇸 美国-4.84MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-5.66MB/s(Youtube:不良林), server: 3.39.227.119, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-5.74MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.64MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-2.57MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-1.03MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇯🇵 日本-3.99MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-447.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-383.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 未知国家-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-383.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 未知国家-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-383.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 未知国家-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇨🇳 台湾-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-383.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 未知国家-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-383.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 未知国家-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-383.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 未知国家-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-473.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-383.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.04MB/s(Youtube:不良林)
+      - 未知国家-1.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.64MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-447.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
