--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,118 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.82MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-989.9KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-8.39MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.53MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.68MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 台湾-7.99MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-7.04MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.92MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.92MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.14MB/s(Youtube:不良林), server: 120.233.186.59, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.41MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.70MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: f7e7b38f-79d5-4860-8687-f8c083e13da4, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-8.47MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.93MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.75MB/s(Youtube:不良林), server: 120.233.186.59, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.14MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-446.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-550.1KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-437.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-989.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-989.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-989.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-989.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.92MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-989.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-989.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-989.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -132,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-989.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.68MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.99MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.04MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.92MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
