--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -7,6 +7,8 @@ external-controller: :9090
 proxies:
   - {name: 🇭🇰 香港-833.3KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
   - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-329.1KB/s(Youtube:不良林), server: cdn1.myuuusss.com, port: 30041, type: ss, cipher: chacha20-ietf-poly1305, password: b195963c-2631-442d-ab3a-6e78df25d904}
+  - {name: 🇨🇳 中国-354.6KB/s(Youtube:不良林), server: cmbe3-vdn.zhs.company, port: 35055, type: vmess, uuid: 1196c95e-16b4-3a86-b12a-33b8c3417dda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: cmbe3-vdn.zhs.company}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -15,6 +17,8 @@ proxy-groups:
       - 🎯 全球直连
       - 🇭🇰 香港-833.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -22,6 +26,8 @@ proxy-groups:
     proxies:
       - 🇭🇰 香港-833.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -30,6 +36,8 @@ proxy-groups:
       - 🎯 全球直连
       - 🇭🇰 香港-833.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -43,6 +51,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🇭🇰 香港-833.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -50,6 +60,8 @@ proxy-groups:
       - 🎯 全球直连
       - 🇭🇰 香港-833.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -58,6 +70,8 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇭🇰 香港-833.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -75,6 +89,8 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇭🇰 香港-833.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
